Add support for authorization
